# Milsupply-env

./: Dockerfile  README.md  __init__.py  inference.py  models.py  openenv.yaml  pyproject.toml  task_definitions.py
server/: Dockerfile  app.py  environment.py  main.py  models.py  requirements.txt
server/tasks/: optimize_allocation.py  priority_classify.py  shortage_detect.py
