[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "milsupply-env"
version = "1.0.0"
description = "Military Logistics & Supply Chain OpenEnv Environment"
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.111.0",
    "uvicorn==0.29.0",
    "pydantic==2.7.1",
    "openai==1.30.1",
    "requests==2.31.0",
]

[project.optional-dependencies]
dev = []

[tool.setuptools.packages.find]
where = ["server"]
